# FrankaEmikaControl_lowerLevel

./: .gitignore  README.md  actual_trajectory.csv  joint_traces.csv  joint_traces_1_tau.csv  joint_traces_tau.csv  plot_joint_traces_tau.py  throw_trajectory.csv  trajectory_with_tau.csv
ball_throw/: actual_trajectory.csv  ik_solver.py  main_throw.py  plot_throw_trajectory.py  poly5_general.py  throw_trajectory.csv  throw_trajectory_meta.npy  trajectory_builder.py  verify_release.py
ball_throw/tests/: test_poly5_general.py
executor/: CMakeLists.txt
executor/src/: panda_executor.cpp
helper_functions/: compute_torques.py
planner/: main_plan.py  plot_trajectory.py  trajectory_planner.py
planner/tests/: test_planner.py
